# composer-system

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  cli.py  profile_comparison.py
composer_system/: __init__.py  brief.py  creation.py  exceptions.py  load.py  models.py  reflection.py  validate.py
data/composers/: bach.json  beethoven.json  chopin.json  haydn.json  mozart.json
outputs/: profile_comparison.md  same_prompt_slide.html
schemas/: composer_profile.v1.json
tests/: test_brief.py  test_load.py  test_profiles.py  test_reflection_creation.py  test_reflection_prose.py  test_validate.py
