[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "composer-system"
version = "0.1.0"
description = "Historically grounded composer profiles: validate, load, reflect, concepts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.12,<3",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["composer_system*"]
